--- a/AvaloniaTestOpeningDialog/Views/MainWindow.axaml
+++ b/AvaloniaTestOpeningDialog/Views/MainWindow.axaml
@@ -15,6 +15,8 @@
   
   <StackPanel Margin="20" Spacing="10">
     <TextBox Text="{Binding UserMessage, UpdateSourceTrigger=PropertyChanged}" />
-    <Button x:Name="OpenDialogButton" Content="Open Dialog" />
+    <Button x:Name="OpenDialogButton"
+         Content="Open Dialog"
+         Command="{Binding OpenDialogCommand}" />
   </StackPanel>
 </Window>
