--- a/AvaloniaTestOpeningDialog/Views/MyDialogWindow.axaml
+++ b/AvaloniaTestOpeningDialog/Views/MyDialogWindow.axaml
@@ -2,9 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="using:ViewModels"
+        xmlns:vm="clr-namespace:AvaloniaTestOpeningDialog.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="AvaloniaTestOpeningDialog.MyDialogWindow"
+        x:Class="AvaloniaTestOpeningDialog.Views.MyDialogWindow"
         Title="MyDialogWindow"
         x:DataType="vm:MyDialogViewModel">
 
