--- a/AvaloniaTestOpeningDialog/Views/MyDialogWindow.axaml
+++ b/AvaloniaTestOpeningDialog/Views/MyDialogWindow.axaml
@@ -1,12 +1,12 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm="using:ViewModels"
+        x:DataType="vm:MyDialogViewModel"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:vm="clr-namespace:AvaloniaTestOpeningDialog.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AvaloniaTestOpeningDialog.Views.MyDialogWindow"
-        Title="MyDialogWindow"
-        x:DataType="vm:MyDialogViewModel">
+        Title="MyDialogWindow">
 
   <StackPanel Margin="20" Spacing="10">
     <TextBlock Text="Edit message from main window:" />
